fix z-index

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,7 +1,7 @@
 header {
   height: 60px;
   width: 100%;
-  z-index: 100;
+  z-index: 200;
   position: fixed;
   top: 0;
   background-color: $white;
